--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.receitasapp">
 
     <application
@@ -9,7 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".activity.LoginActivity" android:label="Login">
+        <activity android:name=".activity.CadastroActivity"></activity>
+        <activity
+            android:name=".activity.LoginActivity"
+            android:label="Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,8 +22,7 @@
         </activity>
         <activity
             android:name=".activity.MainActivity"
-            android:label="Home">
-        </activity>
+            android:label="Home"></activity>
     </application>
 
 </manifest>
